# stacc

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  repo  tips
.github/workflows/: ci.yml  release.yml
branches/jekozyra/: sta-116-version-stamp  sta-117-create-a-gitignore  sta-118-merge-ci-wait  sta-119-retarget-upstack-child-on-partial-merge  sta-122-submit-title-description-persistence  sta-126-bump-v0-2-1  sta-17-wire-oauth-client-id
branches/jillian/: sta-115-1-ignore-tokensave  sta-115-2-nav-schema-version  sta-121-fix-submit-pr-body-reflow-preserve  sta-127-global-cwd-flag  sta-128-agent-context-installer  sta-129-claude-skill-target  sta-130-stacc-first-workflow  sta-131-submit-update-body  sta-132-log-surface-untracked-prs  sta-133-bump-version-to-v040  sta-20-state-load-slashed-branch  sta-50-simplify-global-flags  sta-57-sync-prune-missing-refs  sta-68-u1-git-hunkblame-plumbing-stacc-git  sta-69-u2-stacc-absorb  sta-70-u3-stacc-squash  sta-71-u4-stacc-fold  sta-72-u5-stacc-split  sta-73-u6-stacc-reorder  sta-74-u7-stacc-delete-and-stacc-pop  sta-75-u8-stacc-info  sta-76-u9-stacc-parent-stacc-children  sta-77-u10-stacc-completion  sta-78-u11-stacc-config  sta-79-u12-content-staging-flags  sta-80-u13-scope-flags  sta-81-u14-pr-adoption  sta-82-u15-richer-pr-detail-in-log  sta-84-merge-and-sync-delete-local-branches-for-merged-prs  sta-88-sync-track-untracked  sta-88-sync-track-untracked-infra  test-5
crates/stacc/: Cargo.toml  build.rs
crates/stacc-config/: Cargo.toml
crates/stacc-config/src/: lib.rs
crates/stacc-core/: Cargo.toml
crates/stacc-core/src/: lib.rs  ops.rs  recovery.rs
crates/stacc-forge/: Cargo.toml
crates/stacc-forge/src/: capability.rs  error.rs  lib.rs  model.rs
crates/stacc-git/: Cargo.toml
crates/stacc-git/src/: error.rs  lib.rs
crates/stacc-github/: Cargo.toml
crates/stacc-github/src/: auth.rs  error.rs  forge.rs  lib.rs
crates/stacc-github/tests/: auth.rs
crates/stacc-state/: Cargo.toml
crates/stacc-state/src/: lib.rs  model.rs  store.rs
crates/stacc/assets/agent/: skill-content.md
crates/stacc/src/: cli.rs  commands.rs  error.rs  interactive.rs  lib.rs  main.rs
crates/stacc/src/commands/: absorb.rs  agent.rs  auth.rs  completion.rs  config.rs  info.rs  log.rs  navigation.rs  operations.rs  removal.rs  reorder.rs  split.rs
crates/stacc/tests/: absorb.rs  aliases.rs  auth.rs  checkout.rs  completion.rs  config.rs  create.rs  cwd_flag.rs  delete.rs  fold.rs  info.rs  init.rs  log.rs  merge.rs  merged.rs  modify.rs  move.rs  navigation.rs  parent_children.rs  pop.rs  pr.rs  proxy.rs  recovery.rs  rename.rs  reorder.rs  restack.rs  split.rs  squash.rs  status.rs  submit.rs  sync.rs  sync_forge_less.rs  track.rs  undo.rs  untrack.rs  version.rs  worktree_safety.rs
docs/brainstorms/: 2026-06-03-close-graphite-gaps-requirements.md  2026-06-06-readme-and-distribution-refresh-requirements.md  2026-06-07-graphite-swap-readiness-requirements.md  2026-06-11-seamless-local-multi-forge-requirements.md  2026-06-12-gitlab-forge-equal-requirements.md  2026-06-20-sta128-agent-context-installer-requirements.md  2026-06-20-sta88-sync-track-untracked-requirements.md
docs/plans/: 2026-06-03-001-feat-graphite-command-parity-plan.md  2026-06-06-001-feat-readme-and-distribution-plan.md  2026-06-06-002-feat-graphite-log-parity-plan.md  2026-06-07-001-feat-parallel-agent-foundation-plan.md  2026-06-09-001-feat-p2-daily-driver-command-parity-plan.md  2026-06-10-001-fix-sync-credential-loud-failure-plan.md  2026-06-11-001-feat-forge-less-local-floor-plan.md  2026-06-12-001-feat-gitlab-forge-equal-plan.md  2026-06-16-001-feat-dogfood-stack-create-merge-version-plan.md  2026-06-18-001-feat-claude-agent-guide-stacc-plan.md  2026-06-18-002-fix-sta-125-merge-retarget-and-post-merge-checkout.md  2026-06-19-001-fix-sta-121-submit-pr-body-reflow-preserve-plan.md  2026-06-19-002-chore-sta-50-simplify-global-flags-plan.md  2026-06-20-001-feat-sta-120-absorb-cross-branch-routing-plan.md  2026-06-20-002-feat-sta88-sync-track-untracked-plan.md  2026-06-20-003-feat-sta128-agent-context-installer-plan.md  2026-06-28-001-feat-sta-131-submit-update-body-flag-plan.md  2026-06-28-002-feat-sta-132-log-surface-untracked-prs-plan.md
plans/: algorithms.md  current_state.md  stacc.md
