[package]
name = "stacc-core"
version = "0.0.0"
description = "Stack operations for stacc: submit, sync, restack."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
stacc-git = { path = "../stacc-git" }
stacc-state = { path = "../stacc-state" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
