[package]
name = "stacc-github"
version.workspace = true
description = "GitHub API client and auth for stacc."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
httpmock = "0.7"

[lints]
workspace = true
