[package]
name = "stacc"
version = "0.0.0"
description = "Stacked-diff CLI for AI coding agents."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# This crate produces the `stacc` executable. A package can hold one library
# and any number of binaries; here we declare the single binary explicitly.
[[bin]]
name = "stacc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
stacc-config = { path = "../stacc-config" }
stacc-git = { path = "../stacc-git" }
stacc-state = { path = "../stacc-state" }

[dev-dependencies]
tempfile = { workspace = true }
