[package]
name = "stacc"
version.workspace = true
description = "A stacked-diff CLI."
homepage = "https://github.com/TinyDogTech/stacc"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Cargo auto-detects the targets: src/lib.rs (the library), src/main.rs (the
# `stacc` binary), and src/bin/st.rs (the `st` short alias). Both binaries are
# thin wrappers over the library's `run()`.

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
stacc-config = { path = "../stacc-config" }
stacc-core = { path = "../stacc-core" }
stacc-git = { path = "../stacc-git" }
stacc-github = { path = "../stacc-github" }
stacc-state = { path = "../stacc-state" }

[dev-dependencies]
httpmock = "0.7"
tempfile = { workspace = true }

[lints]
workspace = true
